common-applications/test-environment/mail2list/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mail2list
  name: mail2list
