common-applications/test-environment/mail2list/mail2list-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mail2list-backend-service
  namespace: mail2list
spec:
  selector:
    app: mail2list-backend
  ports:
  - name: http
    port: 9999
    targetPort: 9999
  type: ClusterIP

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mail2list-backend
  namespace: mail2list
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: mail2list-backend
  template:
    metadata:
      labels:
        app: mail2list-backend
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: mail2list-backend
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/mail2list/mail-backend:45c04377883563b483232791c04adb29c42eb8b9
        ports:                                                                                          
        - containerPort: 9999                                                                           
          name: http                                                                                    
          protocol: TCP
        resources:
          limits:
            cpu: 3000m
            memory: 3000Mi
          requests:
            cpu: 3000m
            memory: 3000Mi
