common-applications/test-environment/mail2list/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mail2list-web-service
  namespace: mail2list
spec:
  selector:
    app: mailweb
  ports:
    - name: web
      port: 80
      targetPort: 8081
  type: ClusterIP

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailweb
  namespace: mail2list
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: mailweb
  template:
    metadata:
      labels:
        app: mailweb
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: mailweb
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/mail2list/web:34a85736c9c9201d2c66f028c688211470ab6a98
        ports:                               
        - containerPort: 8081                                                                           
          name: http                                                                                    
          protocol: TCP
        resources:
          limits:
            cpu: 1500m
            memory: 1500Mi
          requests:
            cpu: 1500m
            memory: 1500Mi
