common-applications/test-environment/mail2list/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mail2list-web-ingress
  namespace: mail2list
spec:
  tls:
    - hosts:
        - mail.test.osinfra.cn
      secretName: mail2list-web-tls
  rules:
    - host: mail.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: mail2list-web-service
              servicePort: 80
            path: /
